# toll-roads-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
company/: admin.py  backends.py  commands.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
company/commands/: login_commands.py  register_commands.py
company/migrations/: 0001_initial.py  0002_alter_company_name.py  0003_company_tokens.py
company/serializers/: login_serializers.py  register_serializers.py
company/tests/commands/: test_login_command.py  test_refresh_command.py  test_register_command.py
company/tests/models/: test_account_model.py  test_company_model.py
company/tests/serializers/: test_login_serializers.py  test_register_serializers.py
company/tests/services/: test_account_service.py  test_company_service.py  test_jwt_service.py
company/tests/views/: test_login_view.py  test_refresh_view.py  test_register_view.py
company/views/: auth_views.py
core/: models.py  settings.py  urls.py
core/base/: commands.py
road/: admin.py  commands.py  models.py  serializers.py  services.py  urls.py  views.py
road/commands/: __init__.py  create_road_commands.py  delete_road_by_oid.py  get_all_roads_commands.py  get_road_by_oid.py  update_road_command.py
road/migrations/: 0001_initial.py
road/serializers/: __init__.py  create_road_serializers.py  detail_road_serializers.py  get_all_roads_serializer.py  update_road_serializers.py
road/views/: road_views.py
(+18 files in other folders)
